<resources>
    <string name="app_name">Hotel</string>
    <string name="hint_user_name">Nombre de usuario</string>
    <string name="description_logo">Logo del hotel</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="dontAccount">¿No tienes cuenta?, </string>
    <string name="create_here">Crea una aqui</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_person_name">Nombre</string>
    <string name="hint_person_last_name">Apellidos</string>
    <string name="hint_repeat_password">Repetir Contraseña</string>
    <string name="hint_number_phone" translatable="false">Número de teléfono</string>
    <string name="label_sex" translatable="false">Sexo:</string>
    <string name="label_sex_woman" translatable="false">Mujer</string>
    <string name="label_sex_man" translatable="false">Hombre</string>
    <string name="toolbar_tittle_create_account" translatable="false">Crear Cuenta</string>
    <string name="name_card" translatable="false">Ramirez</string>
    <string name="date_cardview_service">2017\-12\-12</string>
    <string name="tab_search" translatable="false">Buscar</string>
    <string name="tab_home" translatable="false">Inicio</string>
    <string name="tab_profile" translatable="false">Perfil</string>
    <string name="tab_reserve" translatable="false">Reservas</string>
    <string name="tab_service" translatable="false">Servicios</string>
    <string name="tab_site_tour" translatable="false">Túrismo</string>
    <string name="error_invalid_email">Email invalido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Este password es incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_field_phone">Telefono invalido</string>
    <string name="error_field_nameApp">Apellido de person invalido</string>
    <string name="error_field_name">Nombre de persona invalido</string>
    <string name="error_field_pass2">Password no es el mismo</string>
    <string name="error_field_email">Correo no valido</string>
    <string name="error_field_email_repeat">el email ya se encuentra registrado</string>
    <string name="permission_rationale" translatable="false">"Los permisos de contacto son necesarios"</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="type_detail" translatable="false">Tipo:</string>
    <string name="secondwod_detail" translatable="false">Me gusta</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, dignissimos facere inventore neque omnis optio placeat quisquam similique? Eum explicabo facere illum minima, nihil perspiciatis voluptatem. Aspernatur porro possimus suscipit?</string>
    <string name="titledetail" translatable="false">\"Descripción\"</string>
    <string name="transicionname_picture" translatable="false">transicionnamepicture</string>
    <string name="btn_message">Mensajes</string>
    <string name="label_home_icon_offer" translatable="false">Ofertas</string>
    <string name="label_home_icon_site_tour" translatable="false">Lugares Turísticos</string>
    <string name="label_home_icon_service" translatable="false">Servicios</string>
    <string name="label_home_icon_about" translatable="false">Acerca de nosotros</string>
    <string name="label_home_icon_reserve" translatable="false">Reservas</string>
    <string name="label_home_icon_location" translatable="false">Ubicación</string>
    <string name="label_home_icon_activity" translatable="false">Cronograma</string>
    <string name="label_home_icon_food" translatable="false">Alimentos</string>
    <string name="tab_offers" translatable="false">Ofertas</string>
    <string name="tab_sites_tour" translatable="false">Lugares turisticos</string>
    <string name="tab_activity" translatable="false">Calendario de actividades</string>
    <string name="tab_menu_food" translatable="false">Menu</string>
    <string name="tab_about" translatable="false">Acerca de nosotros</string>
    <string name="tab_frequently" translatable="false">Preguntas</string>
    <string name="tab_message_new" translatable="false">Contactenos</string>
    <string name="toolbar_tittle_about" translatable="false">Acerca de nosotros</string>
    <string name="toolbar_tittle_calendar" translatable="false">Calendario de actividades</string>
    <string name="toolbar_tittle_menu_food" translatable="false">Menu de comidas</string>
    <string name="toolbar_tittle_messages" translatable="false">Bandeja de mensajes</string>
    <string name="toolbar_tittle_offer" translatable="false">Lista de ofertas</string>
    <string name="toolbar_tittle_reserve" translatable="false">Reservas</string>
    <string name="toolbar_tittle_services" translatable="false">Lista de servicios</string>
    <string name="toolbar_tittle_sites_tour" translatable="false">Sitios turisticos</string>
    <string name="content_profile_textView_name">Nombre(s):</string>
    <string name="content_profile_textView_lastname">Apellido(s):</string>
    <string name="content_profile_textView_email">Email:</string>
    <string name="content_profile_textView_point">Puntos de fidelizacion</string>
    <string name="content_profile_textView_address">Dirección</string>
    <string name="content_profile_textView_city">Ciudad</string>
    <string name="content_profile_textView_country">País</string>
    <string name="content_profile_textView_sex">Genero</string>
    <string name="content_profile_textView_dateborn">Fecha de nacimiento</string>
    <string name="content_profile_textView_dateregister">Fecha de registro</string>
    <string name="content_profile_textView_numberphone">Teléfono</string>
    <string name="content_profile_textView_typedocument">Documento de identificación</string>
    <string name="content_profile_textView_numberdocument">Número de documento</string>
    <string name="activityabout_text_name">Nombre del hotel:</string>
    <string name="activityabout_text_address">Dirección:</string>
    <string name="activityabout_text_type">Tipo de hotel:</string>
    <string name="activityabout_text_domain">Pagina web</string>
    <string name="activityabout_text_datefoundation">Fecha de fundación</string>
    <string name="activityabout_text_history">Historia del hotel</string>
    <string name="activityabout_text_mision">Misión</string>
    <string name="activityabout_text_vision">Visión</string>
    <string name="activityabout_text_lema">Lema</string>
    <string name="activityabout_text_alcance">Alcance</string>
    <string name="activityabout_text_objetive">Objetivos</string>
    <string name="activityabout_text_description">Descripción</string>
    <string name="activityabout_text_email">Correo electrónico</string>
    <string name="activityabout_text_phone">Teléfono</string>
    <string name="title_activity_location" translatable="false">Ubicacion del hotel</string>
    <string name="textview_distance_locationmap" translatable="false">0 km</string>
    <string name="textview_duration_locationmap" translatable="false">0 min</string>
    <string name="tittle_activity_site_tour" translatable="false">Lugar Turístico</string>
    <string name="address_site">Dirección</string>
    <string name="tittle_activity_offer" translatable="false">Oferta</string>
    <string name="price_offer_textview" translatable="false">Precio:</string>
    <string name="title_time_offer_textview" translatable="false">Tiempo:</string>
    <string name="cardview_type_money">$</string>
    <string name="cardview_food_price">0</string>
    <string name="categoria">Categoria: </string>
    <string name="dateSendCardView">Fecha de envio:</string>
    <string name="remitentCardView" translatable="false">Remitente:</string>
    <string name="titleTextCardView" translatable="false">Asunto:</string>
    <string name="label_home_icon_history" translatable="false">Historial</string>
    <string name="label_home_icon_consume" translatable="false">Consumo</string>
    <string name="toolbar_tittle_consume" translatable="false">Consumo</string>
    <string name="toolbar_tittle_history" translatable="false">Historial</string>
    <string name="action_title_menu">Hotel</string>
    <string name="action_title_settings">Configurar</string>
    <string name="action_title_logout">Cerrar Sesión</string>
    <string name="action_title_frequently">Preguntas frecuentes</string>
    <string name="action_title_suggestion">Sugerencias</string>
    <string name="action_title_complaints">Quejas</string>
    <string name="toolbar_tittle_complaints" translatable="false">Enviar Quejas</string>
    <string name="toolbar_tittle_suggestion" translatable="false">Enviar sugerencias</string>
    <string name="toolbar_tittle_settings" translatable="false">Configuraciones</string>
    <string name="action_send">Enviar Mensaje</string>
    <string name="btn_create_account">Crear Cuenta</string>
    <string name="btn_continue_reserve">Continuar</string>
    <string name="toolbar_tittle_room_available" translatable="false">Habitaciones Disponibles</string>
    <string name="room_cardview_available_room" translatable="false">Habitaciones disponibles</string>
    <string name="toolbar_tittle_room_selected" translatable="false">Habitación</string>
    <string name="label_name_target" translatable="false">Tipo de tarjeta</string>
    <string name="label_target_ccv" translatable="false">CCV</string>
    <string name="label_number_target" translatable="false">Número de tarjeta</string>
    <string name="label_name" translatable="false">Nombre</string>
    <string name="label_last_name" translatable="false">Apellido(s)</string>
    <string name="label_document" translatable="false">Documento</string>
    <string name="label_phone" translatable="false">Telefono</string>
    <string name="label_email" translatable="false">Email</string>
    <string name="label_date_born" translatable="false">Fecha de Nacimiento</string>
    <string name="label_men" translatable="false">Hombre</string>
    <string name="label_women" translatable="false">Mujer</string>
    <string name="label_city" translatable="false">Ciudad</string>
    <string name="label_pais" translatable="false">Pais</string>
    <string name="action_reserve">Reservar</string>
    <string name="label_address" translatable="false">Direccion</string>
    <string name="action_cancel">Cancelar</string>
    <string name="label_service" translatable="false">Servicio</string>
    <string name="label_unit" translatable="false">Cantidad</string>
    <string name="label_time" translatable="false">Tiempo (Minutos)</string>
    <string name="label_date" translatable="false">Fecha</string>
    <string name="label_hour" translatable="false">Hora</string>
    <string name="label_detail" translatable="false">Detalle</string>
    <string name="label_cost_total" translatable="false">Costo total</string>
    <string name="label_hour_start" translatable="false">Hora de inicial</string>
    <string name="action_title_update">Actualizar</string>
    <string name="contentTextCardView">Mensaje</string>
    <string name="toolbar_tittle_message" translatable="false">Mensaje</string>
    <string name="titleTextMessajeCardView" translatable="false">Título</string>
    <string name="typeTextCardView" translatable="false">Tipo</string>
    <string name="toolbar_tittle_offer_consume" translatable="false">Consumir Oferta</string>
    <string name="activar_alarma" translatable="false">Activar Alarma</string>
    <string name="action_title_about">Acerca de nosotros</string>
    <string name="loginFaceBook">Iniciar con Facebook</string>
    <string name="loginGoogle">Iniciar con Google</string>
</resources>