<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ContainerActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_title_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_frequently"
        android:title="@string/action_title_frequently"
        android:orderInCategory="102"
        app:showAsAction="never"/>
    <item android:id="@+id/action_suggestion"
        android:title="@string/action_title_suggestion"
        android:orderInCategory="104"
        app:showAsAction="never"/>
    <item android:id="@+id/action_complaints"
        android:title="@string/action_title_complaints"
        android:orderInCategory="108"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/action_title_logout"
        android:orderInCategory="110"
        app:showAsAction="never"/>
</menu>