<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_service"
    cardview:cardCornerRadius="@dimen/corner_radius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageFoodCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card_service"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/image_font_island"
            android:contentDescription="@string/description_logo"
            android:scaleType="centerCrop"
            android:transitionName="@string/transicionname_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundCard"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/nameFoodCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_primary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/typeTextFoodCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_primary" />

                <TextView
                    android:id="@+id/typeFoodCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_primary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/moneyFoodCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_type_money"
                    android:textColor="@android:color/white"
                    android:paddingRight="@dimen/padding_cardview_money"
                    android:textSize="@dimen/text_size_primary" />

                <TextView
                    android:id="@+id/priceFoodCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_food_price"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_primary" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>