<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.umss.sistemas.tesis.hotel.activity.CreateAccountActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/paddin_horizontal_login">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_create_accout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_create_accout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/personName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_person_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_create_accout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/personLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_person_last_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_create_accout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/numberPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_number_phone"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_create_accout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordCreateAccout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/margin_create_accout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/repeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_repeat_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_create_accout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/label_sex"
                    android:id="@+id/textViewSex" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sex_man"
                    android:id="@+id/radioButtonH"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sex_woman"
                    android:id="@+id/radioButtonM"
                    android:checked="false" />
            </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btnCreateAcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_create_accout"
                android:background="@color/colorPrimary"
                android:text="@string/btn_create_account"/>
        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

