<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_service"
    cardview:cardCornerRadius="@dimen/corner_radius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageSiteTourCardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card_service"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/image_font_island"
            android:contentDescription="@string/description_logo"
            android:scaleType="centerCrop"
            android:transitionName="@string/transicionname_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:background="@color/backgroundCard">

            <TextView
                android:id="@+id/nameSiteTourCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_name_card" />

            <TextView
                android:id="@+id/addressSiteTourCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_cardview_service"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_name_card" />

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>