<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:fitsSystemWindows="true"
    tools:context="com.umss.sistemas.tesis.hotel.activity.LoginActivity">

    <include layout="@layout/actionbar_progress_bar" />

    <LinearLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/description_logo"
                app:srcCompat="@drawable/ic_logo" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/paddin_horizontal_login">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_user_name"
                        android:text="cliente@gmail.com"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:text="admin"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/paddin_horizontal_login"
                    android:onClick="goContainerActivity"
                    android:text="@string/login"
                    android:theme="@style/RaisedButtonDark" />


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/labelDontAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dontAccount"
                        android:textSize="@dimen/text_size_dont_account"
                        android:textColor="@color/editTextColorWhite" />

                    <TextView
                        android:id="@+id/createAccountHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/labelDontAccount"
                        android:onClick="goCreateAccountActivity"
                        android:text="@string/create_here"
                        android:textColor="@color/editTextColorWhite"
                        android:textSize="@dimen/text_size_dont_account"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>