<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_card_service"
    cardview:cardCornerRadius="@dimen/corner_radius_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageService"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_card_service"
            android:background="@drawable/lago"
            android:scaleType="centerCrop"
            android:contentDescription="@string/description_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/background_card_service"
            >

            <TextView
                android:id="@+id/nameServiceCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_name_card"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dateCardviewService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/date_cardview_service"
                    android:textSize="@dimen/text_size_name_card"/>
                <TextView
                    android:id="@+id/timeCardviewService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/date_cardview_service"
                    android:textSize="@dimen/text_size_name_card"
                    android:layout_marginLeft="@dimen/margin_cardview_service"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margin_top_cardview">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>